--- a/404/index.html
+++ b/404/index.html
@@ -44,7 +44,7 @@
           <ul
             class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-xl bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-darkprimary-100 md:dark:bg-transparent dark:border-gray-700">
             <li>
-              <a href="${import.meta.env.BASE_URL}/"
+              <a href="./"
                 class="block py-2 pl-3 pr-4 text-white bg-primary-700 rounded md:bg-transparent md:text-primary-500 md:p-0 md:dark:text-primary-500 dark:bg-primary-600 md:dark:bg-transparent"
                 aria-current="page">Home</a>
             </li>
@@ -58,14 +58,13 @@
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
-              <a href="${import.meta.env.BASE_URL}/schedule/"
-                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Schedule</a>
+              <a href="./regulations/"
+                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Regulations</a>
             </li>
           </ul>
         </div>
-      </div>  
-    </nav>
-
+      </div>
+      </nav>
     <!-- 404 Secction -->
 
     <section>
