--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <ul
             class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-xl bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-darkprimary-100 md:dark:bg-transparent dark:border-gray-700">
             <li>
-              <a href="${import.meta.env.BASE_URL}/"
+              <a href="./"
                 class="block py-2 pl-3 pr-4 text-white bg-primary-700 rounded md:bg-transparent md:text-primary-500 md:p-0 md:dark:text-primary-500 dark:bg-primary-600 md:dark:bg-transparent"
                 aria-current="page">Home</a>
             </li>
@@ -58,12 +58,12 @@
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
-              <a href="${import.meta.env.BASE_URL}/schedule/"
-                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Schedule</a>
+              <a href="./regulations/"
+                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Regulations</a>
             </li>
           </ul>
         </div>
-      </div>  
+      </div>
     </nav>
 
     <div class=" flex justify-center items-center my-32 xl:my-64 flex-col">
@@ -80,7 +80,7 @@
         Sign up for your next math aventure now!
       </p>
       <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-        <a href="${import.meta.env.BASE_URL}/#myForm"
+        <a href="#myForm"
           class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Sign Up
           <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -89,7 +89,7 @@
               clip-rule="evenodd"></path>
           </svg>
         </a>
-        <a href="${import.meta.env.BASE_URL}/"
+        <a href="#"
           class="hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-xl border-2 border-gray-300 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
           <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path
