--- a/schedule/index.html
+++ b/schedule/index.html
@@ -19,7 +19,7 @@
     <nav class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a class="flex items-center">
-        <img src="./assets/logo_n.svg" class="h-8 mr-3 rounded" alt="Logo" />
+        <img src="../assets/logo_n.svg" class="h-8 mr-3 rounded" alt="Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LIMC</span>
         <button id="theme-toggle" type="button" class="mx-4 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
           <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
@@ -41,7 +41,7 @@
         <ul
           class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-xl bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-darkprimary-100 md:dark:bg-transparent dark:border-gray-700">
           <li>
-            <a href="./"
+            <a href="../"
               class="block py-2 pl-3 pr-4 text-white bg-primary-700 rounded md:bg-transparent md:text-primary-500 md:p-0 md:dark:text-primary-500 dark:bg-primary-600 md:dark:bg-transparent"
               aria-current="page">Home</a>
           </li>
@@ -55,8 +55,8 @@
               class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
           </li>
           <li>
-            <a href="./regulations/"
-              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Regulations</a>
+            <a href="./schedule/"
+              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Schedule</a>
           </li>
         </ul>
       </div>
