--- a/404/index.html
+++ b/404/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <title>404</title>
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -108,9 +108,9 @@
 
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
-  <script type="module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-  <script type="module" src="./script.js"></script>
-  <script type="module" src="./vanilla-tilt.js"></script>
+    <script type="module" src="../node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script type="module" src="../script.js"></script>
+    <script type="module" src="../vanilla-tilt.js"></script>
 </body>
 
 </html>
