--- a/schedule/index.html
+++ b/schedule/index.html
@@ -16,6 +16,8 @@
     }
 </script>
 </head>
+
+<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col">
     <nav class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a class="flex items-center">
@@ -64,6 +66,15 @@
     </nav>
     
 
+    <section class="bg-white dark:bg-gray-900">
+      <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+          <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
+              <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Competition Day Schedule</h2>
+              <p class="mb-4 font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis inventore voluptatibus, dolore soluta dolorum ad atque nobis quisquam corporis sit nostrum! Alias aut in voluptate vero sit laudantium quia magnam!</p>
+
+          </div>
+      </div>
+    </section>
 
 
     <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
