--- a/schedule/index.html
+++ b/schedule/index.html
@@ -10,22 +10,31 @@
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
     if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-        document.documentElement.classList.add('dark');
+      document.documentElement.classList.add('dark');
     } else {
-        document.documentElement.classList.remove('dark')
+      document.documentElement.classList.remove('dark')
     }
-</script>
+  </script>
 </head>
 
 <body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col">
-    <nav class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl ">
+  <nav class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a class="flex items-center">
         <img src="../assets/logo_n.svg" class="h-8 mr-3 rounded" alt="Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LIMC</span>
-        <button id="theme-toggle" type="button" class="mx-4 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
-          <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
-          <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+        <button id="theme-toggle" type="button"
+          class="mx-4 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+          <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+          </svg>
+          <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+              fill-rule="evenodd" clip-rule="evenodd"></path>
+          </svg>
         </button>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button"
@@ -50,7 +59,8 @@
 
           <li>
             <a href="#"
-              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About Us</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
+              Us</a>
           </li>
           <li>
             <a href="#"
@@ -63,53 +73,147 @@
         </ul>
       </div>
     </div>
-    </nav>
-    
+  </nav>
 
-    <section class="bg-white dark:bg-gray-900">
-      <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-          <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-              <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Competition Day Schedule</h2>
-              <p class="mb-4 font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis inventore voluptatibus, dolore soluta dolorum ad atque nobis quisquam corporis sit nostrum! Alias aut in voluptate vero sit laudantium quia magnam!</p>
 
-          </div>
+  <section>
+    <div class="py-8 mx-auto max-w-screen-xl lg:py-16 ">
+      <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Competition Day Schedule
+        </h2>
+        <p class="mb-4 font-light">On competition day we will follow this schedule for LMIC 10</p>
+
       </div>
+    </div>
+  </section>
+  <section style="overflow-clip-margin: 1px;" data-tilt data-tilt-perspective="700" data-tilt-speed="1000"
+    data-tilt-transition="true" data-tilt-max="1" id="Welcome"
+    class="antialiased mb-4 pointer-events-auto group overflow-clip  bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50 flex md:flex-row flex-col  max-w-screen-xl xl:mx-auto mx-4 gap-4 xl:w-full">
+      <div class="flow-root py-8 px-4 max-w-screen-xl lg:py-6 lg:px-6">
+        <div class="-my-4 divide-y divide-gray-200 dark:divide-gray-700">
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              10:00 - 10:30
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Opening Ceremony</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              10:30 - 10:45
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Transition to first individual contest</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              10:45 - 11:45
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Round 1 individual</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              11:45 - 12:15
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Break (Snacks)</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              12:15 - 13:15
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Round 2 Team round</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              13:15 - 14:15
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Lunch (Meal and drinks)</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              14:15 - 15:00
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Round 3</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              15:00 - 15:15
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Transitioning to the close ceremony</a>
+            </h3>
+          </div>
+
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              15:15 - 16:00
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Close ceremony and awards</a>
+            </h3>
+          </div>
+        </div>
+      </div>
+
+      <div id="blur-div-1" class="z-10 dark:mix-blend-soft-light mix-blend-darken pointer-events-none absolute left-[-320px] top-[-320px] inset-0 w-[640px] h-[640px] opacity-0 group-hover:opacity-50 dark:group-hover:opacity-[85] blur-[120px] bg-primary-300 rounded-full transition-opacity duration-500"></div>
+
+
     </section>
 
 
-    <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
-      <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between margin-top: auto;">
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Lynx International Mathematics
-          Competition<a href="https://flowbite.com/" class="hover:underline"></a>
-        </span>
-        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-          <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-          </li>
-          <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
-          </li>
-          <li>
-            <a href="#" class="hover:underline">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+  <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between margin-top: auto;">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Lynx International Mathematics
+        Competition<a href="https://flowbite.com/" class="hover:underline"></a>
+      </span>
+      <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+        </li>
+        <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+        </li>
+        <li>
+          <a href="#" class="hover:underline">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 
-    <button id="successButton" data-modal-toggle="successModal"
-      class="block text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-xl text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-      type="button" style="display: none; pointer-events: none;">
-      Show success message
-    </button>
+  <button id="successButton" data-modal-toggle="successModal"
+    class="block text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-xl text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+    type="button" style="display: none; pointer-events: none;">
+    Show success message
+  </button>
 
 
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
   <script type="module" src="../node_modules/flowbite/dist/flowbite.min.js"></script>
   <script type="module" src="../script.js"></script>
+  <script type="module" src="../morph.js"></script>
   <script type="module" src="../vanilla-tilt.js"></script>
 </body>
 
