--- a/details/index.html
+++ b/details/index.html
@@ -83,7 +83,7 @@
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Competition Schedule
         </h2>
-        <p class="mb-4 font-light">The competition is scheduled for Saturday, April 20, 2023, at ASB, running from 10:00 AM to 5:00 PM. Students will be provided with lunch, snacks, and a shirt exclusively made by our Eco Club, with the registration fee to be determined.</p>
+        <p class="mb-4 font-light">The competition is scheduled for Saturday, April 20, 2023, at ASB, running from 10:00 AM to 5:00 PM. Students would be provided with snacks and lunch, with the participation fee to be 15 euros</p>
         <a href="https://forms.gle/VRYSyWEF6o7bGLy27" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
           Sign Up
           <svg class="ml-1 w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
@@ -152,7 +152,7 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              13:50 - 13:40
+              1:50 - 2:40
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Lunch (Meal and Drinks)</a>
@@ -161,7 +161,7 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              15:00 - 16:00
+              3:00 - 4:00
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Round 3</a>
@@ -170,7 +170,7 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              16:00 - 16:15
+              4:00 - 4:15
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Transitioning to the close ceremony</a>
@@ -179,7 +179,7 @@
 
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              16:15 - 17:00
+              4:15 - 5:00
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
               <a href="#" class="hover:underline">Close Ceremony and Awards</a>
